samples/_failures_safe/1761795658_5b02be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32c4a8ac.c: In function ‘main’:
./samples/SAFE/__tmp_32c4a8ac.c:161:5: error: expected expression at end of input
  161 |     printf("Maximum distance from centroid: %.2f\n",
      |     ^~~~~~
./samples/SAFE/__tmp_32c4a8ac.c:161:5: error: expected declaration or statement at end of input
